--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,10 @@
         "php": "^8.2",
         "ext-grpc": "*",
         "barryvdh/laravel-ide-helper": "^3.1",
+        "darkaonline/l5-swagger": "^8.6",
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9",
-        "ext-http": "*"
+        "laravel/tinker": "^2.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
